src/app/dashboard/components/notifications/create-event-form/create-event-form.component.scss
@import 'src/variables';
@import 'src/mixins';

.notification {

  &-title {
    height: 26px;
    color: #333539;
    font-family: Muli;
    font-size: 20px;
    font-weight: bold;
    letter-spacing: 0;
    line-height: 26px;
  }

  .input-group {

    &.sub {
      margin-right: 0;
      margin-bottom: 0;

      &:first-child {
        margin-left: 0;
      }

      .input-container {
        display: flex;
        position: relative;

        .mat-datepicker-toggle {
          position: absolute;
          right: 0;
        }
      }

      .input-label {
        height: 18px !important;
      }
    }

    .input-label {
      margin-bottom: 0.625rem;
      @include input-text-style(14px, #333539);
    }

    .input-control {
      border: 1px solid #535353;
      @include input-text-style(14px, #020202);

      &::-webkit-input-placeholder,
      &::-moz-placeholder,
      &::placeholder {
        @include input-text-style(14px, #C1BEBE);
      }

      &.large {
        height: 80px;
      }

      &.no-resize {
        resize: none;
        overflow-y: auto;
      }

      .image-group {
        width: 330px;

        & img {
          margin-left: 1rem;
        }
      }
    }

  }

  @include button;

  .clear-button {
    box-sizing: border-box;
    height: 40px;
    width: 155px;
    border: 2px solid #F52851;
    border-radius: 8px;
    color: #F52851;
    font-family: Muli;
    font-size: 20px;
    font-weight: bold;
    letter-spacing: 0;
    line-height: 18px;
    background-color: transparent;
    margin-left: 20px;
  }

  .create-button {
    width: 155px;
    margin-top: 0;
    margin-left: 20px;
  }
}

